force-app/main/default/objects/Component__c/Component__c.object-meta.xml
<CustomObject>
    <label>Component</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>