force-app/main/default/objects/Component__c/fields/Committed_On__c.field-meta.xml
<CustomField>
    <fullName>Committed_On__c</fullName>
    <label>Committed On</label>
    <type>DateTime</type>
</CustomField>