force-app/main/default/objects/Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIApplication</fullName>
            </value>
            <value>
                <fullName>AIApplicationConfig</fullName>
            </value>
            <value>
                <fullName>AccountRelationshipShareRule</fullName>
            </value>
            <value>
                <fullName>ActionLinkGroupTemplate</fullName>
            </value>
            <value>
                <fullName>ActionPlanTemplate</fullName>
            </value>
            <value>
                <fullName>AnalyticSnapshot</fullName>
            </value>
            <value>
                <fullName>AnimationRule</fullName>
            </value>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>ApexComponent</fullName>
            </value>
            <value>
                <fullName>ApexEmailNotifications</fullName>
            </value>
            <value>
                <fullName>ApexPage</fullName>
            </value>
            <value>
                <fullName>ApexTestSuite</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
            <value>
                <fullName>AppMenu</fullName>
            </value>
            <value>
                <fullName>AppointmentSchedulingPolicy</fullName>
            </value>
            <value>
                <fullName>ApprovalProcess</fullName>
            </value>
            <value>
                <fullName>AssignmentRule</fullName>
            </value>
            <value>
                <fullName>AssignmentRules</fullName>
            </value>
            <value>
                <fullName>Audience</fullName>
            </value>
            <value>
                <fullName>AuraDefinitionBundle</fullName>
            </value>
            <value>
                <fullName>AuthProvider</fullName>
            </value>
            <value>
                <fullName>AutoResponseRule</fullName>
            </value>
            <value>
                <fullName>AutoResponseRules</fullName>
            </value>
            <value>
                <fullName>BaseSharingRule</fullName>
            </value>
            <value>
                <fullName>BatchCalcJobDefinition</fullName>
            </value>
            <value>
                <fullName>BatchProcessJobDefinition</fullName>
            </value>
            <value>
                <fullName>BlacklistedConsumer</fullName>
            </value>
            <value>
                <fullName>Bot</fullName>
            </value>
            <value>
                <fullName>BrandingSet</fullName>
            </value>
            <value>
                <fullName>BriefcaseDefinition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>