force-app/main/default/objects/Component__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <description>Last Modification done by user on source org</description>
    <label>Committed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>