force-app/main/default/objects/Component__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Date the user modified component on source org</description>
    <label>Changed On</label>
    <type>DateTime</type>
</CustomField>