force-app/main/default/objects/Component__c/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <label>Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>