force-app/main/default/objects/Component__c/fields/MC_Key__c.field-meta.xml
<CustomField>
    <fullName>MC_Key__c</fullName>
    <label>MC Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>