force-app/main/default/objects/Component__c/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <label>Parent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>