force-app/main/default/objects/Component__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repository</label>
    <referenceTo>Repository__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>