force-app/main/default/objects/Component__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snapshot</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Repository</fullName>
            </value>
            <value>
                <fullName>Git Branch</fullName>
            </value>
            <value>
                <fullName>VS Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>