force-app/main/default/objects/Component__c/fields/Veeva_Component__c.field-meta.xml
<CustomField>
    <fullName>Veeva_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veeva Component</label>
    <type>Checkbox</type>
</CustomField>