force-app/main/default/objects/Component__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Version</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>