force-app/main/default/objects/Component__c/fields/Vlocity_Component__c.field-meta.xml
<CustomField>
    <fullName>Vlocity_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vlocity Component</label>
    <type>Checkbox</type>
</CustomField>