force-app/main/default/objects/Component__c/fields/Vlocity_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Vlocity_Component_Name__c</fullName>
    <label>Vlocity Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>