force-app/main/default/objects/Component__c/recordTypes/Repository.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Repository</fullName>
    <label>Repository</label>
</RecordType>