force-app/main/default/objects/Component__c/recordTypes/Test2.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Test2</fullName>
    <label>Test 2</label>
</RecordType>